[package]
name = "ttype"
version = "0.1.0"
authors = ["Ricky (Degausser) <Ricky@Hosfelt.io>"]
edition = "2018"
description = "ttype - A quick macro for printing or returning the type of a variable"
homepage = "https://github.com/deg4uss3r/ttype"
repository = "https://github.com/deg4uss3r/ttype"
readme = "README.md"
license-file = "LICENSE.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
